--- a/css/style.css
+++ b/css/style.css
@@ -348,3 +348,9 @@ img {
 .tongji a {
     color: #fff;
 }
+.logobox-left img{
+        width: 60%;
+    }
+    .foot_con img{
+        width: 60%;
+    }
